ansible_scripts/roles/install_apps/prometheus/files/prometheus_edgenius_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-edgenius
  namespace: edgenius
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: edgenius
