ansible_scripts/roles/install_apps/prometheus/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30000
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
